[WIP] Add partial layout

--- a/dev/less/monsterapp.less
+++ b/dev/less/monsterapp.less
@@ -3,3 +3,15 @@ body {
   background: @fancy-white;
   display: block;
 }
+.monitors {
+  margin-top: 10em;
+}
+.monitors > article {
+  border: 1px solid @concrete;
+}
+.monitor-ok {
+  font-size: 3rem;
+  position: absolute;
+  margin-top: 10px;
+
+}
