--- a/dev/views/dashboard.html
+++ b/dev/views/dashboard.html
@@ -8,14 +8,14 @@
   <p class="navbar-text navbar-right text-primary">App URL</p>
 </div>
 
-<section class="row monitors">
-  <article class=" col-md-2">
+<section class="monitors">
+  <article class=" col-sm-4 col-md-3 col-lg-2">
     <h5 class="text-center">Web1 app</h5>
     <div class="row">
-      <div class="col-md-2">
-        <span class="monitor-ok glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+      <div class="col-sm-1 col-md-2 text-center">
+        <span class="monitor-ok glyphicon glyphicon-thumbs-up hidden-xs hidden-sm" aria-hidden="true"></span>
       </div>
-      <div class="col-md-10">
+      <div class="col-sm-11 col-md-10">
         <div class="col-md-3">
           CPU
         </div>
@@ -37,19 +37,19 @@
     <p class="text-center">MANAGE<span class="caret"></span></p>
   </article>
 
-  <article class=" col-md-2">
+  <article class=" col-sm-4 col-md-3 col-lg-2">
     <h5 class="text-center">DB1 - Lucy</h5>
     <div class="row">
-      <div class="col-md-2">
-        <span class="monitor-ok glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+      <div class="col-sm-1 col-md-2 text-center">
+        <span class="monitor-ok glyphicon glyphicon-thumbs-up hidden-xs hidden-sm" aria-hidden="true"></span>
       </div>
-      <div class="col-md-10">
+      <div class="col-sm-11 col-md-10">
         <div class="col-md-3">
           CPU
         </div>
         <div class="col-md-9">
           <div class="progress ">
-             <div class="progress-bar progress-bar-success" role="progressbar" style="width: 60%;"></div>
+             <div class="progress-bar progress-bar-success" role="progressbar" style="width: 30%;"></div>
           </div>
         </div>
         <div class="col-md-3">
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-9">
           <div class="progress ">
-             <div class="progress-bar progress-bar-success" role="progressbar" style="width: 20%;"></div>
+             <div class="progress-bar progress-bar-success" role="progressbar" style="width: 10%;"></div>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
     <p class="text-center">MANAGE<span class="caret"></span></p>
   </article>
 
-  <article class=" col-md-2">
+  <article class="col-sm-4 col-md-3 col-lg-2">
     <h5 class="text-center">DB1 - Rachel <span class="text-success">Migrating</span> </h5>
     <div class="row">
       <div class="col-md-4">
