Add documentation automatically generated

--- a/docs/partials/api/$dashboardController.html
+++ b/docs/partials/api/$dashboardController.html
@@ -10,7 +10,11 @@
 </li>
 </ul>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_init">init()</h3>
+<ul class="methods"><li><h3 id="methods_getapplist">getAppList()</h3>
+<div class="getapplist"><div class="getapplist-page"><p>Consult the service to get list of app</p>
+</div></div>
+</li>
+<li><h3 id="methods_init">init()</h3>
 <div class="init"><div class="init-page"><p>This method initialize the page of dashboard which contains
 graphics and status board.</p>
 </div></div>
