--- a/dev/views/shared/header.html
+++ b/dev/views/shared/header.html
@@ -1,10 +1,9 @@
-<header>
+<header ng-init="init()">
   <ul class="nav navbar-pills">
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Monster App <span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Monster App<span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Awesome App</a></li>
-        <li><a href="#">Freak action</a></li>
+        <li ng-repeat="value in appList"><a href="#">{{value.name}}</a></li>
       </ul>
     </li>
   </ul>
