--- a/dev/views/dashboard.html
+++ b/dev/views/dashboard.html
@@ -1,7 +1,7 @@
 <section ng-include="'views/shared/header.html'" class="app-header"></section>
 
 <div class="col-sm-5 col-sm-offset-7 col-lg-4 col-lg-offset-8 bg-info">
-  <p class="navbar-text navbar-right">
+  <p class="navbar-text navbar-right" ng-click="getCloneUrl()">
     Show git clone URL<span class="caret"></span>
   </p>
   <p class="navbar-text navbar-right"><a href="#" class="navbar-link">site.com</a><span class="hidden-xs hidden-sm"> | </span></p>
