--- a/docs/partials/api/$dashboardController.html
+++ b/docs/partials/api/$dashboardController.html
@@ -14,6 +14,10 @@
 <div class="getapplist"><div class="getapplist-page"><p>Consult the service to get list of app</p>
 </div></div>
 </li>
+<li><h3 id="methods_getcloneurl">getCloneUrl()</h3>
+<div class="getcloneurl"><div class="getcloneurl-page"><p>Consult the service to get the clone URL, but it will return error</p>
+</div></div>
+</li>
 <li><h3 id="methods_init">init()</h3>
 <div class="init"><div class="init-page"><p>This method initialize the page of dashboard which contains
 graphics and status board.</p>
