Add env. variables mockup

--- a/dev/views/dashboard.html
+++ b/dev/views/dashboard.html
@@ -8,7 +8,7 @@
   <p class="navbar-text navbar-right text-primary">App URL</p>
 </div>
 
-<section class="monitors">
+<section class="container monitors">
   <article class=" col-sm-4 col-md-3 col-lg-2">
     <h5 class="text-center">Web1 app</h5>
     <div class="row">
@@ -75,6 +75,36 @@
         <div class="progress ">
            <div class="progress-bar progress-bar-warning active progress-bar-striped" role="progressbar" style="width: 60%;"></div>
         </div>
+      </div>
+    </div>
+  </article>
+</section>
+
+<section class="container">
+  <article class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Environment Variables</h3>
+    </div>
+    <div class="panel-body">
+      <p>We also make setting up custom Environment Variables really easy.</p>
+      <div class="col-lg-8">
+        <div class="env-vars">
+
+          <div class="form-group">
+            <input type="text" placeholder="KEY"> = <input type="text"  placeholder="VALUE">
+            <button type="button" class="close form-close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          </div>
+
+
+        <button type="button" class="btn btn-primary">Add Another</button>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <h5>Why Would I do This?</h5>
+        <p>Environment variables can be used for obscuring sensitive information, simplifying multi-environment management, or any other way you can think of to use Environment Variables in your app</p>
+        <h5>Related Guides:</h5>
+        <p><a href="#">Environment Variables</a></p>
+        <p><a href="#">View All Guides</a></p>
       </div>
     </div>
   </article>
