Last commit: Add dist, generate final documentation and dependencies

--- a/docs/partials/api/$dashboardController.html
+++ b/docs/partials/api/$dashboardController.html
@@ -20,6 +20,12 @@
 </div><h5 id="methods_getcloneurl_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="getcloneurl-page"><p>ERROR 500</p>
 </div></td></tr></table></div>
 </li>
+<li><h3 id="methods_getcloneurl">getCloneUrl(serverName)</h3>
+<div class="getcloneurl"><div class="getcloneurl-page"><p>Grab server&#39;s data from service</p>
+</div><h5 id="methods_getcloneurl_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>serverName</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="getcloneurl-page"><p>Servers name</p>
+</div></td></tr></tbody></table><h5 id="methods_getcloneurl_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="getcloneurl-page"><p>Data of server</p>
+</div></td></tr></table></div>
+</li>
 <li><h3 id="methods_init">init()</h3>
 <div class="init"><div class="init-page"><p>This method initialize the page of dashboard which contains
 graphics and status board.</p>
